# eve-abyssal-market

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.stage.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  setup.cfg
backend/: Dockerfile  manage.py  mypy.ini  pyproject.toml
backend/abyssal_api/: urls.py  views.py
backend/abyssal_market/: settings.py  urls.py  wsgi.py
backend/abyssal_modules/: context_processors.py  metrics.py  tasks.py  urls.py  utils.py  views.py
backend/abyssal_modules/migrations/: 0002_remove_ownershiprecord.py  0004_move_dogma_attributes.py  0008_moduledogmaattribute_short_name.py  0009_remove_moduledogmaattribute_icon_id.py  0012_moduledogmaattribute_is_derived.py  0014_static_modules.py  0015_rename_new_attribute.py  0016_attribute_view.py  0018_update_attribute_view_dc.py  0019_alter_typeattribute_high_is_good.py  0021_moduleattribute_abyssal_mod_module__1ac629_idx.py  0021_moduleattribute_module_type_id_idx.py  0022_moduleattribute_abyssal_mod_module__ad8ba2_idx_and_more.py  0023_moduleattribute_abyssal_mod_value_8f8ca9_idx_and_more.py  0024_moduleattribute_attribute_value_asc_idx_and_more.py
backend/abyssal_modules/models/: attributes.py  characters.py  modules.py
backend/abyssal_modules/templatetags/: module_stats.py
backend/asset_scanner/: admin.py  models.py  tasks.py
backend/asset_scanner/migrations/: 0001_initial.py
backend/contract_scanner/: models.py  tasks.py
backend/contract_scanner/migrations/: 0001_initial.py  0003_remove_owner.py  0009_contract_region_id.py  0010_contract_modules_nonedit.py
backend/eve_auth/: backend.py  context_processors.py  forms.py  models.py  security.py  views.py
backend/eve_auth/migrations/: 0001_initial.py  0006_delete_all_characters.py  0007_change_character_pk.py  0008_eveuser_owner.py  0010_increase_token_len.py
backend/eve_esi/: __init__.py  api.py  tasks.py
backend/eve_mail_queue/: tasks.py
backend/eve_sde/: apps.py  command.py  models.py
backend/eve_sde/migrations/: 0002_alter_solarsystem_gates.py  0003_station.py
backend/price_predictor/: admin.py  apps.py  models.py  tasks.py  utils.py
backend/price_predictor/migrations/: 0002_add_scaler.py  0003_pricepredictionrecord.py
backend/price_predictor/templatetags/: price_predictor.py
backend/run/: consumer.sh  migrate.sh  server.dev.sh  server.prod.sh
backend/static/css/: theme.css
backend/static/js/: dark_mode.js  mutaplasmid.js
backend/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
backend/swagger_client/api/: __init__.py  alliance_api.py  assets_api.py  bookmarks_api.py  calendar_api.py  character_api.py  clones_api.py  contacts_api.py  contracts_api.py  corporation_api.py  dogma_api.py  faction_warfare_api.py  fittings_api.py  fleets_api.py  incursions_api.py  industry_api.py  insurance_api.py  killmails_api.py  location_api.py  loyalty_api.py  mail_api.py  market_api.py  opportunities_api.py  planetary_interaction_api.py  routes_api.py  search_api.py  skills_api.py  sovereignty_api.py  status_api.py  universe_api.py  user_interface_api.py  wallet_api.py  wars_api.py
backend/swagger_client/models/: __init__.py  bad_request.py  delete_characters_character_id_mail_labels_label_id_unprocessable_entity.py  delete_fleets_fleet_id_members_member_id_not_found.py  delete_fleets_fleet_id_squads_squad_id_not_found.py  delete_fleets_fleet_id_wings_wing_id_not_found.py  error_limited.py  forbidden.py  gateway_timeout.py  (+334 more)
backend/templates/: robots.txt  support.html
(+190 files in other folders)
