[tool.poetry]
name = "eve-abyssal-market"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0"
django = "^2.2.3"
django-bootstrap4 = "^1.1.1"
django-prometheus = "1.1"
django-redis = "^4.11.0"
huey = "^2.2.0"
psycopg2 = "~2.8.0"
requests = "^2.23.0"
scikit-learn = "^1.2.0"
scipy = "^1.7.0"
tqdm = "^4.43.0"
EsiPy = "0.5"
prometheus_client = "^0.7.1"
gunicorn = "^20.0.4"
ipython = "^7.0.0"
sentry-sdk = "^0.14.1"
djangorestframework = "^3.11.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
flake8 = "^3.7.9"
django-debug-toolbar-template-timings = "^0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
