[tool.poetry]
name = "eve-abyssal-market"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0,<3.12"
django = "^2.2.3"
django-bootstrap4 = "22.1"
django-prometheus = "1.1"
django-redis = "^4.11.0"
huey = "^2.4.4"
psycopg2 = "2.8.6"
requests = "^2.28.2"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
tqdm = "^4.43.0"
EsiPy = "0.5"
prometheus_client = "^0.7.1"
gunicorn = "^20.1.0"
ipython = "^8.8.0"
sentry-sdk = "^1.13.0"
djangorestframework = "^3.11.0"
drf-yasg = "^1.21.4"
whitenoise = "^6.3.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
flake8 = "^3.7.9"
django-debug-toolbar-template-timings = "^0.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
