[tool.poetry]
name = "eve-abyssal-market"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0,<3.12"
django = "~4.1"
django-prometheus = "~2.2"
django-redis = "^4.11.0"
huey = "^2.4.4"
psycopg2 = "2.8.6"
requests = "^2.31.0"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
tqdm = "^4.43.0"
EsiPy = "0.5"
prometheus_client = "^0.7.1"
gunicorn = "^20.1.0"
ipython = "^8.10.0"
sentry-sdk = "^1.14.0"
djangorestframework = "^3.11.0"
drf-yasg = "^1.21.4"
whitenoise = "^6.3.0"
django-bootstrap5 = "^22.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
