[tool.poetry]
name = "eve-abyssal-market"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0,<3.12"
django = "~5.0"
huey = {extras = ["redis"], version = "^2.5.0"}
psycopg2 = "^2.9.9"
requests = "^2.31.0"
scikit-learn = "^1.4.0"
scipy = "^1.11.4"
tqdm = "^4.66.1"
prometheus_client = "^0.19.0"
gunicorn = "^21.2.0"
ipython = "^8.20.0"
sentry-sdk = "^1.39.2"
djangorestframework = "^3.14.0"
whitenoise = "^6.6.0"
django-bootstrap5 = "^23.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
drf-yasg = "^1.21.7"
django-prometheus = "^2.3.1"
django-redis = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-tqdm = "^4.66.0.20240106"
types-six = "^1.16.21.20240106"
types-pytz = "^2023.3.1.1"
types-python-jose = "^3.3.4.20240106"
types-python-dateutil = "^2.8.19.20240106"
types-requests = "^2.31.0.20240106"
django-stubs = "^4.2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
